force-app/main/default/objects/Customer_Subscription__c/Customer_Subscription__c.object-meta.xml
<CustomObject>
    <label>Customer Subscription</label>
    <nameField>
        <displayFormat>CS-{00000000}</displayFormat>
        <label>Customer Subscriptions#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>