force-app/main/default/objects/Customer_Subscription__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+User__r.Contact.AccountId, User__r.Contact.Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>