force-app/main/default/objects/Customer_Subscription__c/fields/Article_Number__c.field-meta.xml
<CustomField>
    <fullName>Article_Number__c</fullName>
    <label>Article Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>