force-app/main/default/objects/Customer_Subscription__c/fields/Category_Label__c.field-meta.xml
<CustomField>
    <fullName>Category_Label__c</fullName>
    <label>Category Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>