force-app/main/default/objects/Customer_Subscription__c/fields/Community_Feed__c.field-meta.xml
<CustomField>
    <fullName>Community_Feed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Feed</label>
    <referenceTo>Community_Feed__c</referenceTo>
    <relationshipLabel>Customer Subscriptions</relationshipLabel>
    <relationshipName>Customer_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>