force-app/main/default/objects/Customer_Subscription__c/fields/KB_ID__c.field-meta.xml
<CustomField>
    <fullName>KB_ID__c</fullName>
    <externalId>true</externalId>
    <label>KB ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>