force-app/main/default/objects/Customer_Subscription__c/fields/Post_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Post_Created_By__c</fullName>
    <label>Post Created By</label>
    <length>25</length>
    <type>Text</type>
</CustomField>