force-app/main/default/objects/Customer_Subscription__c/fields/Post_Creator__c.field-meta.xml
<CustomField>
    <fullName>Post_Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Creator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Subscriptions2</relationshipName>
    <type>Lookup</type>
</CustomField>