force-app/main/default/objects/Customer_Subscription__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <formula>IF(Type_of_Comment__c ==&apos;Direct&apos;,  IF(CreatedById== Community_Feed__r.CreatedById, False,True ) ,
 IF(Type_of_Comment__c ==&apos;Indirect&apos;, 
 IF(  (CreatedById==Community_Feed__r.Community_Feed_Parent__r.CreatedById ) &amp;&amp; Community_Feed__r.Send_Email__c ==True, False,		

   IF((CreatedById&lt;&gt;Community_Feed__r.Community_Feed_Parent__r.CreatedById ) &amp;&amp; Community_Feed__r.Send_Email__c ==False ,True, 
   
       IF( (CreatedById&lt;&gt;Community_Feed__r.Community_Feed_Parent__r.CreatedById ) &amp;&amp; Community_Feed__r.Send_Email__c ==True,True,False
	   
	   
   

 ))),False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send  Email</label>
    <type>Checkbox</type>
</CustomField>