force-app/main/default/objects/Customer_Subscription__c/fields/Subscribed_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_User_Email__c</fullName>
    <label>Subscribed User Email</label>
    <type>Email</type>
</CustomField>