force-app/main/default/objects/Customer_Subscription__c/fields/Subscription_created_by__c.field-meta.xml
<CustomField>
    <fullName>Subscription_created_by__c</fullName>
    <formula>CreatedById</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription created by</label>
    <type>Text</type>
</CustomField>