force-app/main/default/objects/Customer_Subscription__c/fields/Topic_Id__c.field-meta.xml
<CustomField>
    <fullName>Topic_Id__c</fullName>
    <label>Topic Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>