force-app/main/default/objects/Customer_Subscription__c/fields/Topic_Name__c.field-meta.xml
<CustomField>
    <fullName>Topic_Name__c</fullName>
    <label>Topic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>