force-app/main/default/objects/Customer_Subscription__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>FeedItem</fullName>
            </value>
            <value>
                <fullName>Forum Category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>