force-app/main/default/objects/Customer_Subscription__c/fields/Type_of_Comment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Comment__c</fullName>
    <formula>IF(ISBLANK(Community_Feed__c ), &apos; &apos;,  IF( ISBLANK(Community_Feed__r.ParentId__c),&apos;Direct&apos; , &apos;Indirect&apos;) )</formula>
    <label>Type of Comment</label>
    <type>Text</type>
</CustomField>