force-app/main/default/objects/Customer_Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Article_Number__c</columns>
    <columns>Author__c</columns>
    <columns>Category_Label__c</columns>
    <columns>Category_Name__c</columns>
    <columns>KB_ID__c</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <columns>User__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>